--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
         </div>
     </div>
    
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV5nuOTlmfsvRYZpn--64G27L12SRtYkI&callback=initMap">
-    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV5nuOTlmfsvRYZpn--64G27L12SRtYkI&callback=initMap"></script>
     <script src="assets/javascript/map.js"></script>
     <script src="assets/javascript/app.js"></script>
     <script src="assets/javascript/geoWeather.js"></script>
